--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,46 +1,79 @@
+body {
+        background-color: #e2dfdf;
+        /* You can also use background-image, background-repeat, etc. */
+      }
+.title{
+        font-family: 'Century Gothic';
+        display: flex;
+        justify-content: center; /* Horizontally center the content */
+        align-items: center; 
+}
 
 .obBox {
-position: relative;
-left:0px;
-  margin: auto;
-  height: fit-content;
-  padding: 30px;
-  text-align: center;
-  /* width: 75%; */
-  max-width: 500px;
-
-  box-sizing: border-box;
-
-
-background: rgba(133, 130, 237, 0.35);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 15px;
-}
-.formField {
-  font-family: 'Typewriterhand';
-  font-size: 15px;
-  font-weight: 300;
-  width: 95%;
-  border: none;
-  height: 35px;
-  padding-left: 15px;
-  margin-bottom: 10px;
-  border-radius: 25px;
-  box-sizing: border-box;
-  background-color: white;
-}
-      
-      .submit-button {
+        opacity: 0.5;
+        position: relative;
+        left: 15%;
+        top: 10%;
+        bottom: 10%;
+        height: fit-content;
+        padding: 30px;
+        text-align: center;
+       /* width: 75%;
+        */
+        max-width: 500px;
+        box-sizing: border-box;
+        /* background: rgba(133, 130, 237, 0.35);
+         */
+         background: rgba(154, 154, 156, 0.35);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 15px;
+   }
+   .returntext{
+        opacity: 1;
+        color: black;
+   }
+   .obBox1 {
+        opacity: 0.5;
+        /* Adjusted styles to position on the right side */
+        position: absolute;
+        top: 10%;
+        bottom: 10%;
+        right: 15%;
+        height: 800px;
+        padding: 30px;
+        width: 30%;
+        text-align: center;
+        max-width: 500px;
+        box-sizing: border-box;
+        background: rgba(154, 154, 156, 0.35);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 15px;
+      }
+    .formField {
+        font-family: 'Century Gothic';
+        font-size: 15px;
+        font-weight: 300;
+        width: 95%;
+        border: none;
+        height: 35px;
+        padding-left: 15px;
+        margin-bottom: 10px;
+        border-radius: 25px;
+        box-sizing: border-box;
+        background-color: white;
+   }
+    .submit-button {
         padding: 10px 20px;
         background-color: #007bff;
         color: #fff;
         border: none;
         border-radius: 4px;
         cursor: pointer;
-      }
-      
-      .output {
+   }
+    .output {
         display: flex;
         flex-direction: column;
-      }
-      
+   }
+#return{
+        right:0px;    
+}   
